--- a/_css/_var.css
+++ b/_css/_var.css
@@ -8,4 +8,39 @@
   --black: #000000;
   --dark-grey: #848484;
 
+
+  --black: #000000;
+  --grey: #e2e2de;
+  --dark-grey: #848484;
+  --green: #449856;
+  --dark-green: #243425;
+  --light-green: #77b06e;
+  --pale-green: #bdd8a0;
+  --jade: #7ac4a6;
+  --orange: #ef4623;
+  --bright-orange: #ff8400;
+  --tangerine: #f08a34;
+  --red: #d33027;
+  --brick: #ef97a4;
+  --fuscia: #df3f8e;
+  --magenta: #e00d52;
+  --purple: #7368af;
+  --light-purple: #ad90c9;
+  --lavender: #d0bcdd;
+  --blue: #3d65af;
+  --bright-blue: #0027f5;
+  --light-blue: #8ac2cb;
+  --powder-blue: #94b0e0;
+  --pink: #dba6cc;
+  --light-salmon: #fce2d0;
+  --blush: #f4c3c3;
+  --yellow: #f1b729;
+  --bright-yellow: #fee63c;
+  --light-yellow: #fbfcd0;
+  --butter: #f7c384;
+  --light-beige: #fcf1d0;
+  --turquoise: #3fb0a2;
+  --light-turquoise: #c9e3e2;
+
+
 }
