--- a/_css/style.css
+++ b/_css/style.css
@@ -5,18 +5,18 @@
   padding-top: var(--unit);
 }
 .sf-logo{
-  margin-left: -27px;
+  margin-left: -24px;
 }
 .slow-factory-logo{
-  width: 150px;
+  width: 120px;
 }
 @media (--viewport-md) {
   .sf-logo{
-    margin-left: -32px;
+    margin-left: -30px;
   }
   .slow-factory-logo{
-    height: 43px;
-    width: 170px;
+    height: auto;
+    width: 150px;
   }
 }
 
