--- a/_css/colour.css
+++ b/_css/colour.css
@@ -10,14 +10,108 @@
   color: var(--dark-grey);
 }
 
+
 /* Backgrounds
 */
-/* . {
-  background: var(--) !important;
-} */
 .bg-black {
-  background: var(--black) !important;
+  background-color: var(--black) !important;
 }
 .bg-dark-grey {
   background: var(--dark-grey) !important;
+}
+.bg-grey {
+  background: var(--grey) !important;
+}
+.bg-light-grey {
+  background: var(--light-grey) !important;
+}
+.bg-very-light-grey {
+  background: var(--very-light-grey) !important;
+}
+.bg-green {
+  background: var(--green) !important;
+}
+.bg-dark-green {
+  background: var(--dark-green) !important;
+}
+.bg-light-green {
+  background: var(--light-green) !important;
+}
+.bg-pale-green {
+  background: var(--pale-green) !important;
+}
+.bg-jade {
+  background: var(--jade) !important;
+}
+.bg-orange {
+  background: var(--orange) !important;
+}
+.bg-bright-orange {
+  background: var(--bright-orange) !important;
+}
+.bg-tangerine {
+  background: var(--tangerine) !important;
+}
+.bg-red {
+  background: var(--red) !important;
+}
+.bg-brick {
+  background: var(--brick) !important;
+}
+.bg-blue {
+  background: var(--blue) !important;
+}
+.bg-bright-blue {
+  background: var(--bright-blue) !important;
+}
+.bg-light-blue {
+  background: var(--light-blue) !important;
+}
+.bg-powder-blue {
+  background: var(--powder-blue) !important;
+}
+.bg-fuscia {
+  background: var(--fuscia) !important;
+}
+.bg-pink {
+  background: var(--pink) !important;
+}
+.bg-light-salmon {
+  background: var(--light-salmon) !important;
+}
+.bg-blush {
+  background: var(--blush) !important;
+}
+.bg-magenta {
+  background: var(--magenta) !important;
+}
+.bg-light-purple {
+  background: var(--light-purple) !important;
+}
+.bg-purple {
+  background: var(--purple) !important;
+}
+.bg-lavender {
+  background: var(--lavender) !important;
+}
+.bg-yellow {
+  background: var(--yellow) !important;
+}
+.bg-bright-yellow {
+  background: var(--bright-yellow) !important;
+}
+.bg-light-yellow {
+  background: var(--light-yellow) !important;
+}
+.bg-light-beige {
+  background: var(--light-beige) !important;
+}
+.bg-butter {
+  background: var(--butter) !important;
+}
+.bg-light-turquoise {
+  background: var(--light-turquoise) !important;
+}
+.bg-turquoise {
+  background: var(--turquoise) !important;
 }
