--- a/_css/utility.css
+++ b/_css/utility.css
@@ -7,7 +7,11 @@ hr {
 }
 .underline {
   padding-bottom: 1rem;
-  border-bottom: 7px solid #000;
+  border-bottom: 4px solid #000;
+}
+.overline {
+  padding-top: 1rem;
+  border-top: 4px solid #000;
 }
 .bg-cover {
   background-repeat: no-repeat;
