--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -2,5 +2,51 @@
 <div class="section footer">
   <div class="container">
 
+    <style>
+    .footerlogoblock {
+      padding: 0 2.5rem 3rem 0;
+      display: inline-block;
+    }
+    .footerlogoblock img {
+      width: 10rem;
+      padding-bottom: 5px;
+    }
+    </style>
+
+    <div class="footerlogoblock">Created by <br>the Slow Factory:</div>
+
+    <div class="footerlogoblock">
+      <a href="https://slowfactory.earth">
+        <img style="width:9rem" src="{{ 'images/slow-S-factory.svg' | asset_url }}" />
+        <br>
+      </a>
+      501c3 nonprofit
+    </div>
+
+    <div class="footerlogoblock">
+      <a href="https://slowfactory.studio">
+        <img src="{{ 'images/slow-factory-logo-studio.svg' | asset_url }}" />
+        <br>
+      </a>
+      web3 & production
+    </div>
+
+    <div class="footerlogoblock">
+      <a href="https://slowfactorylabs.co">
+        <img src="{{ 'images/slow-labs-logo.svg' | asset_url }}" />
+        <br>
+      </a>
+      new materials research
+    </div>
+
+    <div class="footerlogoblock">
+      <a href="https://slowhide.com">
+        <img style="width:7rem" src="{{ 'images/Slowhide-logo.png' | asset_url }}" />
+        <br>
+      </a>
+      plastic-free vegan leather
+    </div>
+
+
   </div>
 </div>
